fix: keep user-facing text as Components end to end
Fix an infinite recursion in DragonMenu.safeSet, introduced in a853ff2: the
out-of-range branch returned, but the fall-through called safeSet on itself
instead of inv.setItem, so every VALID slot blew the stack and no menu could
open. It survived two commits because nothing exercised build(). The range rule
is now a static isPlaceable(slot, size) with tests, including the off-by-one at
slot == size.

Stop routing messages through the legacy §-string path. Every item name, lore
line and chat message was parsed to a Component, serialized down to legacy and
re-parsed. LegacyRoundTripTest measures what that costs: hover events and click
actions are destroyed outright, and a gradient loses its per-character color.
Plain color and style do survive, which is why this went unnoticed — simple
messages looked correct while rich ones silently lost their behavior.

DragonMenu and DragonCommand now use the Component API throughout, and the
legacy String half of MessageManager is deleted rather than deprecated, so the
lossy path is no longer reachable. ColorUtil and ColorFormats drop what that
left dead.

Migrate the boss bar to Adventure's BossBar, the last place the configured
gradient was flattened, since Bukkit's took a String title. Existing style
values are mapped (SOLID -> PROGRESS, SEGMENTED_n -> NOTCHED_n) so no server
silently loses its configured style.

Player names are now spliced in as literal text after the message is parsed
instead of being substituted into the source beforehand, which makes
MiniMessage tag injection from a stored or non-vanilla name structurally
impossible. Also read event.top-size in the console ranking rather than a
second hardcoded 5.