@@ -8,6 +8,7 @@ import studio.polaroid.polaroiddragon.manager.DragonManager;
 import studio.polaroid.polaroiddragon.manager.MessageManager;
 import studio.polaroid.polaroiddragon.manager.StatsManager;
 import studio.polaroid.polaroiddragon.util.TimeUtil;
+import net.kyori.adventure.text.Component;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -62,34 +63,34 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
             case "start" -> {
                 if (!sender.hasPermission("polaroiddragon.admin.start")) { noPerms(sender); return true; }
                 if (dragonManager.isAnyEventRunning()) {
-                    sender.sendMessage(messages.get(dragonManager.isEventActive()
+                    sender.sendMessage(messages.component(dragonManager.isEventActive()
                             ? "event.already-active"
                             : "event.countdown-in-progress"));
                     return true;
                 }
                 dragonManager.startCountdown();
-                sender.sendMessage(messages.get("event.countdown-started"));
+                sender.sendMessage(messages.component("event.countdown-started"));
             }
 
             case "spawn" -> {
                 if (!sender.hasPermission("polaroiddragon.admin.spawn")) { noPerms(sender); return true; }
                 if (dragonManager.isAnyEventRunning()) {
-                    sender.sendMessage(messages.get(dragonManager.isEventActive()
+                    sender.sendMessage(messages.component(dragonManager.isEventActive()
                             ? "event.already-active"
                             : "event.countdown-in-progress"));
                     return true;
                 }
                 dragonManager.spawnDragon();
-                sender.sendMessage(messages.get("event.dragon-spawned"));
+                sender.sendMessage(messages.component("event.dragon-spawned"));
             }
 
             case "stop" -> {
                 if (!sender.hasPermission("polaroiddragon.admin.stop")) { noPerms(sender); return true; }
                 if (!dragonManager.isAnyEventRunning()) {
-                    sender.sendMessage(messages.get("event.no-event-or-countdown")); return true;
+                    sender.sendMessage(messages.component("event.no-event-or-countdown")); return true;
                 }
                 dragonManager.stopEvent();
-                sender.sendMessage(messages.get("event.event-stopped"));
+                sender.sendMessage(messages.component("event.event-stopped"));
             }
 
             case "top" -> {
@@ -128,7 +129,7 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
                 plugin.getMenuConfig().reload();
                 dragonManager.reschedule();
                 dragonManager.reloadWebhook();
-                sender.sendMessage(messages.get("general.config-reloaded"));
+                sender.sendMessage(messages.component("general.config-reloaded"));
             }
 
             default -> sendHelp(sender);
@@ -142,27 +143,27 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
     // ─────────────────────────────────────────────
 
     private void sendInfoChat(CommandSender sender) {
-        sender.sendMessage(messages.get("info.title"));
+        sender.sendMessage(messages.component("info.title"));
         if (dragonManager.isEventActive()) {
-            sender.sendMessage(messages.get("info.status-active"));
+            sender.sendMessage(messages.component("info.status-active"));
             EnderDragon d = dragonManager.getActiveDragon();
             if (d != null) {
-                sender.sendMessage(messages.get("info.hp", Map.of(
+                sender.sendMessage(messages.component("info.hp", Map.of(
                         "{current}", String.format("%.0f", d.getHealth()),
                         "{max}", String.format("%.0f", d.getMaxHealth())
                 )));
             }
-            sender.sendMessage(messages.get("info.participants", Map.of(
+            sender.sendMessage(messages.component("info.participants", Map.of(
                     "{count}", String.valueOf(dragonManager.getDamageTracker().getParticipantCount())
             )));
         } else if (dragonManager.isCountdownActive()) {
-            sender.sendMessage(messages.get("info.status-countdown"));
-            sender.sendMessage(messages.get("info.time-remaining", Map.of(
+            sender.sendMessage(messages.component("info.status-countdown"));
+            sender.sendMessage(messages.component("info.time-remaining", Map.of(
                     "{time}", TimeUtil.format(dragonManager.getCountdownSeconds())
             )));
         } else {
-            sender.sendMessage(messages.get("info.status-inactive"));
-            sender.sendMessage(messages.get("info.next-event", Map.of(
+            sender.sendMessage(messages.component("info.status-inactive"));
+            sender.sendMessage(messages.component("info.next-event", Map.of(
                     "{next}", dragonManager.getScheduleManager().getNextFullString(),
                     "{time}", TimeUtil.format(dragonManager.getScheduleManager().getSecondsUntilNext())
             )));
@@ -174,27 +175,27 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
     // ─────────────────────────────────────────────
 
     private void sendCurrentEventTop(CommandSender sender) {
-        sender.sendMessage(messages.get("top.title"));
+        sender.sendMessage(messages.component("top.title"));
         if (!dragonManager.isEventActive()) {
-            sender.sendMessage(messages.get("top.no-event-active"));
+            sender.sendMessage(messages.component("top.no-event-active"));
             return;
         }
         DamageTracker tracker = dragonManager.getDamageTracker();
         List<Map.Entry<UUID, Double>> ranking = tracker.getRanking();
 
         if (ranking.isEmpty()) {
-            sender.sendMessage(messages.get("top.no-damage-yet"));
+            sender.sendMessage(messages.component("top.no-damage-yet"));
             return;
         }
 
-        int limit = Math.min(ranking.size(), 5);
+        // Honour the configured top size instead of a second hardcoded limit.
+        int topSize = plugin.getConfig().getInt("event.top-size", 5);
+        int limit = Math.min(ranking.size(), Math.max(1, topSize));
         for (int i = 0; i < limit; i++) {
             Map.Entry<UUID, Double> entry = ranking.get(i);
-            sender.sendMessage(messages.get("top.entry", Map.of(
-                    "{medal}", messages.getMedal(i + 1),
-                    "{player}", tracker.getPlayerName(entry.getKey()),
-                    "{damage}", String.format("%,.0f", entry.getValue())
-            )));
+            sender.sendMessage(rankingLine("top.entry", i + 1,
+                    tracker.getPlayerName(entry.getKey()),
+                    Map.of("{damage}", "%,.0f".formatted(entry.getValue()))));
         }
 
         if (sender instanceof Player player) {
@@ -204,12 +205,29 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
                 for (int i = 0; i < ranking.size(); i++) {
                     if (ranking.get(i).getKey().equals(player.getUniqueId())) { myRank = i + 1; break; }
                 }
-                sender.sendMessage(messages.get("top.my-position", Map.of(
+                sender.sendMessage(messages.component("top.my-position", Map.of(
                         "{rank}", String.valueOf(myRank),
-                        "{damage}", String.format("%,.0f", myDamage)
+                        "{damage}", "%,.0f".formatted(myDamage)
                 )));
             }
         }
+    }
+
+    /**
+     * Builds one ranking row as a Component.
+     *
+     * <p>The medal is spliced in as a Component so its own styling survives, and
+     * the player name is inserted as literal text after the message is parsed:
+     * a name loaded from the database or sent by a non-vanilla client can then
+     * never open a MiniMessage tag.
+     */
+    private Component rankingLine(String key, int position, String playerName,
+                                  Map<String, String> textPlaceholders) {
+        Component line = messages.component(key, textPlaceholders);
+        line = line.replaceText(b -> b.matchLiteral("{medal}")
+                .replacement(messages.medalComponent(position)));
+        return line.replaceText(b -> b.matchLiteral("{player}")
+                .replacement(Component.text(playerName)));
     }
 
     // ─────────────────────────────────────────────
@@ -217,20 +235,19 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
     // ─────────────────────────────────────────────
 
     private void sendHallOfFame(CommandSender sender) {
-        sender.sendMessage(messages.get("hall-of-fame.title"));
-        List<StatsManager.PlayerStats> top = statsManager.getTopByDamage(5);
+        sender.sendMessage(messages.component("hall-of-fame.title"));
+        int topSize = Math.max(1, plugin.getConfig().getInt("event.top-size", 5));
+        List<StatsManager.PlayerStats> top = statsManager.getTopByDamage(topSize);
 
         if (top.isEmpty()) {
-            sender.sendMessage(messages.get("hall-of-fame.no-stats"));
+            sender.sendMessage(messages.component("hall-of-fame.no-stats"));
             return;
         }
 
         for (int i = 0; i < top.size(); i++) {
             StatsManager.PlayerStats ps = top.get(i);
-            sender.sendMessage(messages.get("hall-of-fame.entry", Map.of(
-                    "{medal}", messages.getMedal(i + 1),
-                    "{player}", ps.getName(),
-                    "{damage}", String.format("%,.0f", ps.getTotalDamage()),
+            sender.sendMessage(rankingLine("hall-of-fame.entry", i + 1, ps.getName(), Map.of(
+                    "{damage}", "%,.0f".formatted(ps.getTotalDamage()),
                     "{events}", String.valueOf(ps.getEventsParticipated())
             )));
         }
@@ -238,8 +255,8 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
         if (sender instanceof Player player) {
             StatsManager.PlayerStats myStats = statsManager.getPlayerStats(player.getUniqueId());
             if (myStats != null) {
-                sender.sendMessage(messages.get("hall-of-fame.my-stats", Map.of(
-                        "{damage}", String.format("%,.0f", myStats.getTotalDamage()),
+                sender.sendMessage(messages.component("hall-of-fame.my-stats", Map.of(
+                        "{damage}", "%,.0f".formatted(myStats.getTotalDamage()),
                         "{events}", String.valueOf(myStats.getEventsParticipated())
                 )));
             }
@@ -251,8 +268,8 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
     // ─────────────────────────────────────────────
 
     private void sendPlaceholders(CommandSender sender) {
-        sender.sendMessage(messages.get("placeholders-help.title"));
-        messages.getList("placeholders-help.lines").forEach(sender::sendMessage);
+        sender.sendMessage(messages.component("placeholders-help.title"));
+        messages.componentList("placeholders-help.lines").forEach(sender::sendMessage);
     }
 
     // ─────────────────────────────────────────────
@@ -260,8 +277,8 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
     // ─────────────────────────────────────────────
 
     private void sendHelp(CommandSender sender) {
-        sender.sendMessage(messages.get("help.title"));
-        messages.getList("help.lines").forEach(sender::sendMessage);
+        sender.sendMessage(messages.component("help.title"));
+        messages.componentList("help.lines").forEach(sender::sendMessage);
     }
 
     /** True when the argument selects the current event ranking. */
@@ -295,5 +312,5 @@ public class DragonCommand implements CommandExecutor, TabCompleter {
         return StringUtil.copyPartialMatches(prefix, options, new ArrayList<>());
     }
 
-    private void noPerms(CommandSender sender) { sender.sendMessage(messages.get("general.no-permission")); }
+    private void noPerms(CommandSender sender) { sender.sendMessage(messages.component("general.no-permission")); }
 }
